--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${title}"></title>
+<!-- CSS only -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+	crossorigin="anonymous">
 </head>
 <body>
 
@@ -20,7 +26,7 @@
 		<li th:text="'User is enable:' + ${user.enable}"></li>
 		<li th:text="'Gender: ' + ${user.gender}"></li>
 	</ul>
-	
+
 	<h4>Roles Information</h4>
 	<ul th:each="role : ${user.roles}">
 		<li th:text="${role.id} + ': '+ ${role.name} + ' => ' + ${role.role}"></li>
